force-app/main/default/objects/tc9_pr__Branch_Code__mdt/tc9_pr__Branch_Code__mdt.object-meta.xml
<CustomObject>
    <label>Branch Code</label>
    <pluralLabel>Branch Codes</pluralLabel>
</CustomObject>