force-app/main/default/objects/tc9_pr__Branch_Code__mdt/fields/tc9_pr__Address__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Address__c</fullName>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>