force-app/main/default/objects/tc9_pr__Branch_Code__mdt/fields/tc9_pr__Country__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
                <default>true</default>
                <label>Australia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>