force-app/main/default/objects/tc9_pr__Branch_Code__mdt/fields/tc9_pr__Financial_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Financial_Institution_Name__c</fullName>
    <label>Financial Institution Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>