force-app/main/default/objects/tc9_pr__Branch_Code__mdt/fields/tc9_pr__Postcode__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Postcode__c</fullName>
    <label>Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>